# shelect

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  shelect.py  test_shelect.py
examples/: example.json  people.csv  values.json
s/: deploy
shelect/: __main__.py  cli.py  engine.py  filesystem.py  filesystem_fake.py  output.py  output_fake.py  repl.py  test_ast_utils.py  test_engine.py
